<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Musique</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="display_name">Display Name</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="top_songs">Top Songs</string>
    <string name="all_songs">All Songs</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="now_playing">Now Playing</string>
    <string name="search_songs">Search songs...</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="error_occurred">An error occurred</string>
</resources>
